@@ -1,5 +1,11 @@
 2008-08-11  Jari Aalto  <jari.aalto@cante.net>
 
+	* tiny/tinyreplace.el (tinyreplace-interactive-region-args):
+	Update to modern backquote.
+	(tinyreplace-replace-over-files-compile-buffer): Remove
+	`replace-string'.
+	(tinyreplace-replace-ask): Add %s to message format.
+
 	* tiny/tinymy.el (tinymy-mail-buffer): Use
 	`insert-buffer-substring'.
 	(tinymy-maybe-disable-auto-save): Use `make-local-variable.
